--- a/Projects.html
+++ b/Projects.html
@@ -8,9 +8,9 @@
 <body>
     <h1 style="text-decoration:underline">Projects:</h1>
     <ol>
-        <li>Client:</li>
-        <li>Description:</li>
-        <li>Technologies:</li>
+        <li>Client: Google</li>
+        <li>Description: Cloud integrated services</li>
+        <li>Technologies: Cloud Computing, AES Encryption</li>
     </ol>
 </body>
 </html>
